@@ -42,6 +42,8 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 
 ## Misc Improvements
 
+- ``materials.ItemTraitsDialog``: added a default ``on_select``-handler which toggles the traits.
+
 ## Documentation
 
 ## API
